--- a/style.css
+++ b/style.css
@@ -8,6 +8,19 @@ h1{
     font-size: 60px;
 }
 
+header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    margin-right: 10px;
+}
+
+header img{
+    height: 60px;
+}
+
+
 .content{
     background-color: #3a7ed2;
     min-height: 100px;
@@ -101,7 +114,7 @@ footer p{
     color: #777;
 }
 
-.media .fa{
+.media .fa, .fa-solid{
     color: #3a7ed2;
     margin: 0 13px;
     cursor: pointer;
